--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "socket.io": "^1.3.7",
+    "socket.io-adapter": "^0.3.1",
+    "socket.io-client": "^1.3.7",
+    "socket.io-parser": "^2.2.4",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
