--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.0.0",
   "main": "gruntfile.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.0",
+    "crypto": "0.0.3",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "http": "^0.0.0",
+    "jwt-simple": "^0.3.1",
     "mongodb": "^2.0.47",
+    "mongoose": "^4.2.4",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "socket.io": "^1.3.7",
