--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express-session": "^1.12.1",
     "http": "^0.0.0",
     "jwt-simple": "^0.3.1",
+    "moment": "^2.10.6",
     "mongodb": "^2.0.47",
     "mongoose": "^4.2.4",
     "passport": "^0.3.0",
