--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "^1.4.0",
     "crypto": "0.0.3",
     "express": "^4.13.3",
+    "express-jwt": "^3.3.0",
     "express-session": "^1.12.1",
     "http": "^0.0.0",
+    "jsonwebtoken": "^5.4.1",
     "jwt-simple": "^0.3.1",
     "moment": "^2.10.6",
     "mongodb": "^2.0.47",
