--- a/package.json
+++ b/package.json
@@ -3,27 +3,34 @@
   "version": "1.0.0",
   "main": "gruntfile.js",
   "dependencies": {
+    "async": "^1.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
+    "connect-busboy": "0.0.2",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.0",
     "crypto": "0.0.3",
     "express": "^4.13.3",
     "express-jwt": "^3.3.0",
     "express-session": "^1.12.1",
+    "fs": "0.0.2",
     "http": "^0.0.0",
     "jsonwebtoken": "^5.4.1",
     "jwt-simple": "^0.3.1",
+    "lodash": "^3.10.1",
     "moment": "^2.10.6",
     "mongodb": "^2.0.47",
     "mongoose": "^4.2.4",
+    "nodemailer": "^1.10.0",
+    "nodemailer-smtp-transport": "^1.0.4",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
     "socket.io": "^1.3.7",
     "socket.io-adapter": "^0.3.1",
     "socket.io-client": "^1.3.7",
     "socket.io-parser": "^2.2.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "validator": "^4.2.1"
   },
   "devDependencies": {},
   "scripts": {
