--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "moment": "^2.10.6",
     "mongodb": "^2.0.47",
     "mongoose": "^4.2.4",
+    "multer": "^1.1.0",
+    "multiparty": "^4.1.2",
     "nodemailer": "^1.10.0",
     "nodemailer-smtp-transport": "^1.0.4",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0",
+    "s3": "^4.4.0",
     "socket.io": "^1.3.7",
     "socket.io-adapter": "^0.3.1",
     "socket.io-client": "^1.3.7",
     "socket.io-parser": "^2.2.4",
     "underscore": "^1.8.3",
+    "uuid": "^2.0.1",
     "validator": "^4.2.1"
   },
   "devDependencies": {},
